methods.slug.SlugHunting.scala.error
Compilation error:
SlugHunting:10: error: ';' expected but 'if' found.
    }if (estSurBiscuit() == true) {
     ^